# SuperVirtualFileSystem

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
virtual_file_system_app/: CMakeLists.txt  main.cpp
virtual_file_system_app/src/: gui.cpp  gui.hpp  main.cpp  my_tests.cpp
virtual_file_system_app/src/commands/: change_directory_command.hpp  command_manager.cpp  command_manager.hpp  command_result.hpp  commands.hpp  copy_command.cpp  copy_command.hpp  i_command.hpp  list_directory_command.cpp  list_directory_command.hpp  make_directory_command.cpp  make_directory_command.hpp  make_file_command.cpp  make_file_command.hpp  print_buffer.hpp  print_token.hpp  prompt_command.cpp  prompt_command.hpp
virtual_file_system_app/src/commands/commands/: change_directory_command.cpp  change_directory_command.hpp  copy_command.cpp  copy_command.hpp  list_directory_command.cpp  list_directory_command.hpp  make_directory_command.cpp  make_directory_command.hpp  make_file_command.cpp  make_file_command.hpp  print_file_contents_command.cpp  print_file_contents_command.hpp
virtual_file_system_app/src/filesystem/: directory.hpp  file.hpp  file_system.cpp  file_system.hpp  node.hpp  node_type.hpp
virtual_file_system_app/src/helper/: container_helper.hpp  number.hpp
virtual_file_system_app/src/io/: color.hpp  console_input.cpp  console_input.hpp  console_output.cpp  console_output.hpp  i_input_handler.hpp  i_output_handler.hpp
virtual_file_system_lib/: CMakeLists.txt  virtual_file_system.cpp  virtual_file_system.hpp  virtual_file_system_lib.cpp  virtual_file_system_lib.hpp
